fix stupid spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,6 @@
     height: 50%;
 }
 
-.nav-item{
+.nav-item, .nav-link{
     font-size: large;
 }
